# portfolio-rebalancer

./: .gitignore  Dockerfile  Makefile  README.md  cli.py  docker-compose.yml  main.py  portfolit_rebalancer.code-workspace  pyproject.toml
.agents/skills/codex-cli/: SKILL.md
.agents/skills/ips-judgment-filter/: SKILL.md
.agents/skills/ips-pilot-cli-review/: SKILL.md
.agents/skills/ips-pilot-cli-review/agents/: openai.yaml
.agents/skills/snapshot-parameter-sweep-report/: SKILL.md
api/: __init__.py  analysis.py  evaluation.py  portfolio.py
api/v1/: __init__.py  analysis.py  config.py  evaluation.py  journal.py  portfolio.py  portfolios.py  router.py  serialization.py  simulation.py
config/: ips.yaml
core/: __init__.py  asset.py  models.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: DataTable.tsx  MetricCard.tsx
frontend/src/lib/: api.ts  parser.ts  schemas.ts
frontend/src/styles/: app.css
middleware/: __init__.py  session.py
services/: __init__.py  analysis_service.py  evaluation_service.py  evaluation_view.py  portfolio_service.py  simulation_service.py
static/css/: main.css
static/js/: app.js
steps/: __init__.py  data_analysis.py  evaluation_proposal.py  portfolio_input.py
storage/: __init__.py  config_store.py  database.py  journal_store.py  portfolio_store.py
templates/: base.html  index.html
templates/components/: data_analysis.html  evaluation_proposal.html  portfolio_input.html
templates/partials/: analysis_results.html  asset_table.html  error_message.html  evaluation_results.html
tests/: test_api_v1.py  test_cli.py  test_config_management.py  test_data_fetcher.py  test_evaluation_improvements.py  test_evaluation_service_ips.py  test_ips_logic.py  test_journal_store.py  test_portfolio_input.py  test_portfolio_persistence.py  test_simulation_service.py  test_snapshot_sweep_report.py
utils/: data_fetcher.py  helpers.py  ips.py  ips_config.py  metrics.py  optimization.py
(+3 files in other folders)
