[project]
name = "portfolio-rebalancer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "plotly>=5.24.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydantic>=2.0.0",
    "streamlit>=1.50.0",
    "watchdog>=6.0.0",
    "yfinance>=0.2.66",
    "scipy>=1.16.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "ruff>=0.14.2",
]
