[project]
name = "ips-pilot"
version = "0.1.0"
description = "IPS-based monthly investment operations workbench"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "redis>=5.2.0",
    "itsdangerous>=2.2.0",
    "pyyaml>=6.0.0",
    "yfinance>=0.2.66",
    "scipy>=1.16.2",
    "typer>=0.12.0",
]

[project.scripts]
ips-pilot = "cli:app"
portfolio-rebalancer = "cli:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli", "main"]

[tool.setuptools.packages.find]
include = ["api*", "core*", "middleware*", "services*", "storage*", "utils*"]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "ipykernel>=7.0.1",
    "pytest>=8.0.0",
    "ruff>=0.14.2",
]
